--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "author": "Patrick Stern",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/patrick-stern/flexbox-grid-module.git"
+  },
   "devDependencies": {
     "classnames": "^2.3.2",
     "microbundle-crl": "^0.13.11",
