--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@strn_dev/flexbox-grid-module",
-    "version": "0.2.3",
+    "version": "0.2.4",
     "description": "react flexbox grid",
     "keywords": [
         "react",
@@ -9,12 +9,13 @@
         "css-modules"
     ],
     "scripts": {
-        "build": "microbundle-crl --no-compress --format modern,cjs",
-        "dev": "microbundle-crl watch --no-compress --format modern,cjs"
+        "build": "microbundle --no-compress --jsx React.createElement --css-modules css_[hash:base64:5] --format modern,cjs",
+        "dev": "microbundle watch --no-compress --jsx React.createElement --css-modules css_[hash:base64:5]  --format modern,cjs"
     },
     "main": "dist/index.js",
-    "module": "dist/index.modern.js",
-    "source": "src/index.js",
+    "module": "dist/index.modern.mjs",
+    "source": "src/index.ts",
+    "types": "dist/index.d.ts",
     "engines": {
         "node": ">=10"
     },
@@ -28,19 +29,18 @@
         "url": "https://github.com/patrick-stern/flexbox-grid-module/issues"
     },
     "devDependencies": {
+        "@types/react": "^18.0.21",
+        "@types/react-dom": "^18.0.6",
         "classnames": "^2.3.2",
-        "microbundle-crl": "^0.13.11",
-        "prop-types": "^15.8.1",
+        "microbundle": "^0.15.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "typescript-plugin-css-modules": "^3.4.0"
     },
     "files": [
         "dist"
     ],
     "peerDependencies": {
-        "classnames": "^2.3.2",
-        "prop-types": "^15.8.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react": "^18.2.0"
     }
 }
